﻿SoundHelix
----------

Author: Thomas Schürger (thomas@schuerger.com)


Change log
----------

0.5u:

    - Added usage of GNU Getopt for cleaner parameter parsing. Run "java -jar SoundHelix.jar -h" to see the details. The syntax
      of the start script parameters (run.bat and run.sh) have not been changed.

    - Added support for "fake" seventh chords, which use 3 instead of 4 notes. Seventh chords can be selected using a
      simple syntax (e.g., "C7" for C major seventh, "Am76" for A minor seventh, second inversion).

    - Added the tags "precondition" and "postcondition" to the "conditionalPattern" tag of the DrumSequenceEngine, which
      replace the "condition" tag and have a much more user-friendly syntax for specifying the condition. The "condition"
      tag is deprecated, but can still be used.

    - Updated included log4j version from 1.2.16 to 1.2.17.


0.4: 2012-03-13

    - Made the MelodySequenceEngine much more configurable. You can now specify the minimum pitch ("minPitch" tag), the
      maximum pitch ("maxPitch" tag) and the list of pitch distances ("pitchDistances" tag).
    
    - Added support for generating more than one melody per distinct chord section to the MelodySequenceEngine. You can
      now provide a list of integers for the number of melodies to generate per distinct chord section. For each distinct
      chord section a numer is chosen randomly from the list and that number of melodies are generated for the chord section.
      The generated melodies for the distinct chord sections will be used in a round-robin manner each time the respective chord
      section appears.
    
    - Added support for specifying a minimizeChordDistance attribute per chordPattern tag in the PatternHarmonyEngine.
      If set, this attribute allows you to override the global minimizeChordDistance value.

    - Added "retriggerPitches" tag to the PadSequenceEngine. If set to true, all chord pitches will be retriggered on